# BeWithMe

./: .env.example  .gitignore  BLOCKCHAIN_INTEGRATION.md  BLOCKCHAIN_QUICKSTART.md  BLOCKCHAIN_QUICK_REFERENCE.md  FINETUNING_QUICKSTART.md  INTEGRATION_GUIDE.md  PHONE_UI_GUIDE.md  README.md  README_EN.md  admin_tool.py  bewithme.db  init_database.py  migrate_add_ipfs_fields_to_voice_profiles.py  migrate_add_verification_documents.py  package-lock.json  package.json  pyproject.toml  requirements.txt  start_services.sh  stop_services.sh  test_ipfs_service.py
data/: xtts_voice_registry.json
docs/: ARCHITECTURE.md  FINETUNING_GUIDE.md
sample_audio/: README.md
scripts/: finetune_workflow.sh  quick_finetune.sh  run_all.sh  run_backend.sh  run_frontend.sh  start_phone_ui.sh
src/: __init__.py  config.py
src/api/: __init__.py  auth.py  main.py  models.py
src/api/routes/: auth.py  blockchain.py.disabled  chat.py  conversation.py  relationships.py  voice.py
src/blockchain/contracts/: BeWithMe.sol
src/core/: __init__.py  asr.py  blockchain_service.py  conversation.py  ipfs_service.py  key_voice_service.py  voice_cloning.py
src/database/: README.md  __init__.py  base.py  connection.py
src/database/crud/: __init__.py  agent_profile.py  audit.py  conversation.py  relationship.py  stats.py  user.py  verification_document.py  voice_profile.py
src/frontend/: PHONE_UI_REFACTORED.md  __init__.py  app.py  app_corrupted.py.bak  phone_app.py  phone_call_ai.py  phone_call_ui.py
src/frontend/components/: __init__.py  phone_components.py
src/frontend/styles/: phone_ui.css
src/frontend/utils/: __init__.py  helpers.py
src/training/: __init__.py  data_preparation.py  evaluate_models.py  google_colab_based_mastrial_ai_fine_tuning.ipynb  inference.py  mistral_api_finetuner.py
src/training/data/: README.md  eval_kin.jsonl  formatted_train.jsonl  formatted_val.jsonl  kin_dial_ultra_quality.jsonl  temp_formatted_data.jsonl  train_kin.jsonl
src/vue-frontend/: index.html  package-lock.json  package.json
src/vue-frontend/src/: App.vue  main.ts
src/vue-frontend/src/assets/: main.css
src/vue-frontend/src/components/: AdminReview.vue  AgentCreation.vue  Chat.vue  FamilyVerification.vue  Login.vue  PhoneCall.vue  TrustAndSecurity.vue  UserProfile.vue  VoiceClone.vue
src/vue-frontend/src/router/: index.ts
src/vue-frontend/src/services/: api.ts  (+1 more)
tests/: __init__.py
(+6 files in other folders)
